--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.7",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "currency-symbol-map": "^5.1.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.7.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.363.0",
+    "moment": "^2.30.1",
     "next-themes": "^0.4.6",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -41,14 +45,21 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^6.30.0",
+    "react-swipeable": "^7.0.2",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.2.0",
     "tailwind-variants": "^0.1.19",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/plugin-syntax-jsx": "^7.27.1",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22.15.21",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
@@ -62,6 +73,7 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-babel": "^1.3.2"
   }
 }
