--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@ node_modules
 dist
 dist-ssr
 *.local
+node_modules
+.next
+out
+build
+.env
+.DS_Store
 
 # Editor directories and files
 .vscode/*
